--- a/frontend/src/components/Sidebar.module.css
+++ b/frontend/src/components/Sidebar.module.css
@@ -1,34 +1,25 @@
 .sidebar {
-    width: 200px;
-    background-color: black;
-    color: aliceblue;
-  }
-  
-  .sidebarTitle {
-      margin: 30px 0 0 0;
-      text-align: center;
-      font-size: 20px;
-  }
-  
-  .sidebarPartsOfSpeech {
-    text-align: center;
-  }
-  
-  .sidebarPartOfSpeech {
-    width: 50%;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  
-  .links {
-    width: 50%;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  .links a {
-    display: block;
-    color: white;
-  }
-  
+  width: 200px;
+  background-color: black;
+  color: aliceblue;
+}
+
+.sidebarTitle {
+  margin: 30px 0 0 0;
+  text-align: center;
+  font-size: 20px;
+}
+
+.sidebarSearchInput{
+  text-align: center;
+}
+
+.sidebarPartsOfSpeech {
+  text-align: center;
+}
+
+.sidebarPartOfSpeech {
+  width: 50%;
+  margin: 0 auto;
+  text-align: left;
+}
