Add Frontend and Backend Validation for input entry
- If input entry is already in the database, display error message and disable submit button
- Change entry field definition to unique

--- a/frontend/src/features/vocabulary/styles/Footer.module.css
+++ b/frontend/src/features/vocabulary/styles/Footer.module.css
@@ -22,3 +22,15 @@
   font-size: 20px;
   border-color: rgb(107, 107, 238);
 }
+.footer button:hover {
+  cursor: pointer;
+}
+
+.footer button:disabled {
+  background-color: rgb(161, 161, 168);
+  border-color: rgb(161, 161, 168);
+}
+
+.footer button:disabled:hover {
+  cursor: default;
+}
