--- a/frontend/src/features/vocabulary/styles/List.module.css
+++ b/frontend/src/features/vocabulary/styles/List.module.css
@@ -1,3 +1,5 @@
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
+
 .vocabularies {
     width: 50%;
     margin: auto;
