--- a/frontend/src/features/vocabulary/styles/Button.module.css
+++ b/frontend/src/features/vocabulary/styles/Button.module.css
@@ -1,13 +1,49 @@
-.btn {
-    width: 45px;
-    height: 45px;
-    display: flex;
-    background-color: white;
-    border: none;
-    justify-content: center;
-    align-items: center;
+.button {
+  width: 50%;
+  margin: 30px auto;
+  text-align: center;
 }
 
-.btn:hover {
-    cursor: pointer;
+.button button {
+  height: 40px;
+  width: 100px;
+  border-radius: 5px;
+  font-size: 20px;
+  margin: 0 5px;
+}
+
+.button button:disabled {
+  background-color: rgb(161, 161, 168);
+  border-color: rgb(161, 161, 168);
+}
+
+.button button:disabled:hover {
+  cursor: default;
+}
+
+.insertBtn, .updateBtn {
+  background-color: black;
+  border: none;
+  color: white;
+}
+
+.insertBtn:hover, .updateBtn:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  transition: 0.5s;
+  border: 1px solid black;
+}
+
+.deleteBtn {
+  background-color: red;
+  color: white;
+}
+
+.deleteBtn:hover {
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid red;
+  color: red;
+  transition: 0.5s;
 }
